Added tabs for sitemap and added gulp plugins for reading the html files

--- a/src/components/footer/footer.hbs
+++ b/src/components/footer/footer.hbs
@@ -4,20 +4,20 @@ pageMetaAuthor: "Page Author Name"
 pageMetaTitle: "Page Meta Title"
 pageMetaDescription: "Page Meta Description"
 pageMetaKeywords: "Page, Meta, Keywords"
-componentCSS: [header]
-componentJS: [header]
+componentCSS: [footer]
+componentJS: [footer]
 layout: default
 ---
 
-<section class="header-component full-wrap">
+<section class="footer-component full-wrap">
   <div class="wrap-logo c-xs-12 c-sm-6">
       <h1 class="frontpage-title">
         <span class="logo">
-						<span class="c-xs-6 c-sm-6">
-						  <a href="www.google.com" role="link">
-						    <p> Header component</p>
-						  </a>
-						</span>
+				<span class="c-xs-6 c-sm-6">
+				  <a href="www.google.com" role="link">
+					<p> Footer component</p>
+				  </a>
+				</span>
         	</span>
       </h1>
     </div><!-- end logo -->
